<resources>

    <string name="app_name">Overflow Me</string>
    
    <string name="questions">Questions</string>
    <string name="users">Users</string>
    <string name="badges">Badges</string>
    <string name="tags">Tags</string>
	<string name="notifications">Notifications</string>
	<string name="settings">Settings</string>
	<string name="age">Age</string>
	<string name="city">City</string>
	<string name="country">Country</string>
	<string name="location">Location</string>
	<string name="reputation">Reputation</string>
	<string name="answers">Answers</string>
	<string name="votes">Votes</string>
	<string name="logout">Log out</string>
	<string name="ask">Ask</string>
	<string name="authentication">Authentication</string>
	<string name="vibrate">Vibrate</string>
	<string name="ringtone">Ringtone</string>
	<string name="sort">Sort</string>
	<string name="score">Score</string>
	<string name="activity">Activity</string>
	
	<string name="menuMe_reputation">%s reputation</string>
	
	<string name="auth_loading">Authentication succeed.\nLoading your information&#8230;</string>
	
	<string name="user_aboutHim">About him</string>
	<string name="user_aboutMe">About me</string>
	<string name="user_memberFor">Member for</string>
	<string name="user_loadingUser">Loading user&#8230;</string>
	
	<string name="aboutMe_website">Website :</string>
	<string name="aboutMe_aboutMeTitle">About %s :</string>
	<string name="aboutMe_noWebsite">(no website)</string>
	<string name="aboutMe_noAboutMe">(empty)</string>
	<string name="aboutMe_websiteActivityTitle">%s\'s website</string>
	
	<string name="settings_notifs_frequencyOfUpdate">Frenquency of update</string>
	<string name="settings_notifs_reputationChange_title">Reputation change</string>
	<string name="settings_notifs_reputationChange_summary">Be notified when your reputation changes</string>
	<string name="settings_notifs_notifs_title">New notification</string>
	<string name="settings_notifs_notifs_summary">Be notified whan you get a notification</string>
	<string name="settings_notifs_ringtone_summary">Choose the ringtone</string>
	
	<string name="notif_reputationAndNotifs">Reputation change &amp; unread notifications</string>
	<string name="notif_unreadNotifs">Unread notifications</string>
	<string name="notif_reputationGain">Reputation gain</string>
	<string name="notif_reputationLoss">Reputation loss</string>
	<string name="notif_reputationGained">You gained %s reputation</string>
	<string name="notif_reputationLost">You lost %s reputation</string>
	<string name="notif_unreadNotifsCount">%s unread notifications</string>
	<string name="notif_reputationAndNotifsText">%1$s reputation &amp; %2$s unread notifications</string>
	
</resources>