<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?slidingMenuBackground" >
    
    <fr.ydelouis.overflowme.view.MenuMeView_
        android:id="@+id/menu_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_button_orange" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayMiddleLight"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/menu_settings"
            android:drawableLeft="@drawable/ic_menu_settings"
            android:text="@string/settings"
            style="@style/menu_button" />
        
        <View 
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grayMiddleLight"/>
        
        <TextView
            android:id="@+id/menu_logout"
            android:drawableLeft="@drawable/ic_menu_logout"
            android:text="@string/logout"
            style="@style/menu_button" />
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>
    
    <TextView 
        android:id="@+id/menu_questions"
        android:drawableLeft="@drawable/ic_menu_question"
        android:text="@string/questions"
        style="@style/menu_item" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>
    
    <TextView 
        android:id="@+id/menu_users"
        android:drawableLeft="@drawable/ic_menu_users"
        android:text="@string/users"
        style="@style/menu_item" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>
    
    <TextView 
        android:id="@+id/menu_tags"
        android:drawableLeft="@drawable/ic_menu_tags"
        android:text="@string/tags"
        style="@style/menu_item" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>
    
    <TextView 
        android:id="@+id/menu_badges"
        android:drawableLeft="@drawable/ic_menu_badges"
        android:text="@string/badges"
        style="@style/menu_item" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLight"/>
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="28dp"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:text="@string/notifications"
	        android:textSize="18sp"
	        android:textColor="@color/grayMiddleLight" />
	    
	    <TextView 
	        android:id="@+id/menu_notifsCounter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:padding="3dp"
	        android:gravity="center"
	        android:text="10"
	        android:textColor="@color/white"
	        android:background="@drawable/bkg_notifcounter" />
	    
	</LinearLayout>
	
	<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayMiddleLight"/>
	
	<ListView 
	    android:id="@+id/menu_notifsList"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:divider="@color/grayMiddleLight"
	    android:dividerHeight="0.5dp" />
    

</LinearLayout>